src/styles/landing-screen.scss
@use "variables.scss";
body {
    background-color: rgb(200, 182, 255);
    font-family: "Playwrite AU NSW", cursive;
    font-optical-sizing: auto;
}
.landing-screen-all,
.game-content,
.end-screen-content,
.winner-screen-content {
    align-content: center;
    justify-items: center;
}
.landing-screen,
.pizza-content-styling,
.end-screen-styling,
.winner-screen-styling {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border: purple solid;
    background-color: rgb(184, 192, 255);
    width: 90%;
    padding: 10px;
    @include variables.desktop {
        width: 70%;
        padding: 25px;
    }
    @include variables.xl {
        margin-top: 2vw;
    }
}
.landing-screen {
    &__header {
        text-align: center;
        font-size: large;
        grid-area: header;
        @include variables.tablet {
            font-size: x-large;
        }
        @include variables.desktop {
            align-self: flex-end;
            font-size: 50px;
        }
    }
    &__intro {
        text-align: center;
        font-size: x-small;
        grid-area: intro;
        @include variables.tablet {
            align-self: flex-start;
        }
        @include variables.desktop {
            align-self: flex-start;
            font-size: medium;
        }
    }
    @include variables.tablet {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-areas: "menu header" "menu button" "menu intro";
        justify-content: space-evenly;
    }
    @include variables.desktop {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-areas: "menu header" "menu button" "menu intro";
        justify-content: space-evenly;
    }
}
.start-game-btn {
    grid-area: button;
    background-color: purple;
    color: white;
    font-family: "Playwrite AU NSW", cursive;
    border-radius: 10px;
    &:hover {
        transition: 1s ease;
        transform: scale(1.5);
        @include variables.desktop {
            transform: scale(1.8);
        }
        @include variables.tablet {
            width: 70%;
            justify-self: center;
        }
        @include variables.desktop {
            width: 50%;
            justify-self: center;
        }
    }
}
#dessertBtn {
    grid-area: secretBtn;
    align-self: flex-end;
    width: 40px;
    height: 20px;
    font-size: 4px;
    &:hover {
        transition: 1s ease;
        transform: scale(5);
    }
    @include variables.tablet {
        width: 40px;
    }
}
.overlay-container {
    grid-area: menu;
    position: relative;
    width: 50%;
    @include variables.tablet {
        width: 100%;
    }
    @include variables.desktop {
        width: 100%;
    }
    &__image {
        display: block;
        width: 100%;
        height: auto;
    }
}
.overlay-container:hover .overlay {
    height: 100%;
    @include variables.mobile {
        height: 240%;
    }

    &__text {
        white-space: wrap;
        color: white;
        font-size: 8px;
        position: absolute;
        overflow: hidden;
        top: 50%;
        left: 50%;
        width: 80%;
        transform: translate(-50%, -50%);
        @include variables.desktop {
            font-size: 14px;
        }
        @include variables.tablet {
            font-size: 10px;
        }
    }
}
.overlay-container:hover .overlay-container__image {
    transform: scale(0.7);
}
.overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: purple;
    overflow: hidden;
    opacity: 0.95;
    width: 100%;
    height: 0;
    transition: 1s ease;
    &__text {
        color: purple;
    }
}

.audio-controls__play-btn {
    width: 5vw;
    height: 5vw;
    background-color: transparent;
    border: none;
    &--img {
        width: 4vw;
        height: 4vw;
    }
}

